src/app/common/components/marketing/marketing-styles.scss
.m-marketing__main,
.m-marketing__section {
  // Common

  .m-marketing--hideMobile {
    @media screen and (max-width: $m-grid-min-vp) {
      display: none;
    }
  }

  .m-marketing__title,
  h1 {
    font-size: 22px;
    line-height: 44px;
    font-weight: bold;
    opacity: 0.7;
    margin: 12px 0 4px;

    @include m-theme() {
      color: themed($m-grey-800);
    }
  }

  .m-marketing__subtitle,
  h2 {
    font-weight: 900;
    font-size: 42px;
    line-height: 44px;
    margin: 0 0 23px;
    position: relative;
    z-index: 0;

    @media screen and (max-width: $m-grid-min-vp) {
      font-size: 32px;
      line-height: 34px;
      margin: 0 0 18px;
    }

    &.m-marketing__subtitle--asTitle {
      font-size: 48px;
      line-height: 53px;
      margin: 0 0 26px;

      @media screen and (max-width: $m-grid-min-vp) {
        font-size: 38px;
        line-height: 46px;
        margin: 0 0 21px;
      }
    }

    em {
      font-style: inherit;
      text-decoration: inherit;
      white-space: nowrap;
      position: relative;

      &::after {
        content: '';
        display: inline-block;
        position: absolute;
        background: rgba(80, 226, 195, 0.3);
        top: 0.36em;
        left: -0.03em;
        right: -0.03em;
        bottom: 0.22em;
        pointer-events: none;
        z-index: -1;
      }
    }

    em + em::after {
      left: -0.25em;
    }
  }

  p.m-marketing__description {
    font-size: 18px;
    line-height: 27px;
    margin: 0 0 36px;
  }

  ul.m-marketing__points {
    list-style: disc;
    margin: 0 0 45px;
    padding: 0 0 0 1em;
    font-size: 16px;
    line-height: 21px;

    > li {
      margin-bottom: 19px;

      &:last-child {
        margin-bottom: 0;
      }
    }
  }

  // Style 1

  &.m-marketing__section--style-1 {
    @include m-theme() {
      background: linear-gradient(
        180deg,
        themed($m-white) 0%,
        themed($m-marketing-bg-gradient-start) 100%
      );
    }

    .m-marketing__wrapper {
      position: relative;
      z-index: 0;
      padding: 95px 0 85px;

      @media screen and (max-width: $m-grid-min-vp) {
        padding: 30px 0;
        margin: 0 20px;
      }
    }

    .m-marketing__body {
      position: relative;

      &::after {
        content: '';
        display: block;
        position: absolute;
        top: 0;
        left: 0;
        width: 383px;
        height: 388px;
        transform: translate(-290px, 97px);
        background: url('<%= APP_CDN %>/assets/marketing/deco_2.svg') no-repeat;
        z-index: -1;
        opacity: 0.6;

        @media screen and (max-width: $m-grid-min-vp) {
          transform: translate(170px, -180px);
          left: auto;
          right: 0;
        }
      }
    }

    h2,
    .m-marketing__subtitle {
      @media screen and (max-width: $m-grid-min-vp) {
        padding: 0 30px;
      }
    }

    p.m-marketing__description {
      @include m-theme() {
        color: themed($m-grey-300);
      }

      @media screen and (max-width: $m-grid-min-vp) {
        padding: 0 30px;
      }
    }

    ul.m-marketing__points {
      @media screen and (max-width: $m-grid-min-vp) {
        padding: 0 30px;
      }
    }

    .m-marketing__image {
      position: relative;
      align-self: center;
      z-index: 0;

      span {
        display: block;
        position: relative;
        width: 528px;
        height: 415px;

        @media screen and (max-width: $m-grid-min-vp) {
          width: 313px;
          height: 237px;
          margin: 0 auto;
        }

        // Deco

        &::before {
          content: '';
          display: block;
          position: absolute;
          width: 393px;
          height: 193px;
          top: 0;
          left: 0;
          transform: translate(61px, 179px);
          background: url('<%= APP_CDN %>/assets/marketing/deco_1.svg')
            no-repeat;
          z-index: -1;

          @media screen and (max-width: $m-grid-min-vp) {
            top: 0;
            left: 0;
            width: 377px;
            height: 193px;
            transform: translate(-32px, 18px);
            background-size: cover;
          }
        }

        &::after {
          content: '';
          display: block;
          position: absolute;
          top: 0;
          left: 0;
          width: 383px;
          height: 383px;
          transform: translate(178px, -95px);
          background: url('<%= APP_CDN %>/assets/marketing/deco_2.svg')
            no-repeat;
          z-index: -1;

          @media screen and (max-width: $m-grid-min-vp) {
            content: initial;
            display: none;
          }
        }
      }

      img {
        position: absolute;
        object-fit: cover;
      }

      .m-marketing__image--1 {
        top: 0;
        left: 90px;
        width: 327px;
        height: 327px;

        @media screen and (max-width: $m-grid-min-vp) {
          top: 0;
          left: 0;
          width: 190px;
          height: 190px;
        }
      }

      .m-marketing__image--2 {
        top: 295px;
        left: 0;
        width: 181px;
        height: 120px;

        @media screen and (max-width: $m-grid-min-vp) {
          display: none;
        }
      }

      .m-marketing__image--3 {
        top: 163px;
        left: 358px;
        width: 170px;
        height: 198px;

        @media screen and (max-width: $m-grid-min-vp) {
          top: 65px;
          left: 165px;
          width: 148px;
          height: 172px;
        }
      }
    }
  }

  // Style 2

  &.m-marketing__section--style-2 {
    .m-marketing__wrapper {
      position: relative;
      z-index: 0;
      padding: 72px 0 32px;

      @media screen and (max-width: $m-grid-min-vp) {
        padding: 0;
      }
    }

    .m-marketing__body {
      position: relative;

      @media screen and (max-width: $m-grid-min-vp) {
        padding: 0 30px 30px;
      }

      &::before {
        content: '';
        position: absolute;
        top: 0;
        right: -290px;
        bottom: -56px;
        left: 0;
        transform: translate(-86px, -56px);
        clip-path: polygon(0% 0%, 0% 100%, 100% 92%, 100% 0%);
        z-index: -1;

        @include m-theme() {
          background: linear-gradient(
            180deg,
            themed($m-marketing-bg-colored-gradient-start) 0%,
            themed($m-marketing-bg-colored-gradient-end) 99.99%
          );
        }

        @media screen and (max-width: $m-grid-min-vp) {
          right: 0;
          bottom: -3vw;
          transform: none;
          clip-path: none;
        }
      }

      h1 {
        @include m-on-theme(dark) {
          color: #ffffff;
        }

        @media screen and (max-width: $m-grid-min-vp) {
          margin: 15px 0 15px;
          text-align: center;
        }
      }

      h2 {
        @include m-on-theme(dark) {
          color: #ffffff;
        }

        @media screen and (max-width: $m-grid-min-vp) {
          font-size: 28px;
          line-height: 32px;
          margin: 0 0 17px;
          text-align: center;
        }
      }
    }

    p.m-marketing__description {
      margin-bottom: 42px;
      padding-right: 200px;

      @include m-theme() {
        color: themed($m-grey-300);
      }

      @include m-on-theme(dark) {
        color: #ffffff;
      }

      @media screen and (max-width: $m-grid-min-vp) {
        padding-right: 0;
        margin-bottom: 30px;
        font-size: 16px;
        line-height: 23px;
        text-align: center;
      }
    }

    .m-marketing__image {
      position: relative;
      z-index: 0;

      img {
        object-fit: contain;
        clip-path: polygon(0% 1%, 0% 97%, 100% 100%, 100% 0%);

        @media screen and (max-width: $m-grid-min-vp) {
          width: 100vw;
          height: 100vw;
          object-fit: cover;
          clip-path: polygon(0% 2%, 0% 97%, 100% 100%, 100% 0%);
        }
      }

      span {
        display: inline-block;
        position: relative;

        // Deco

        &::before {
          content: '';
          display: block;
          position: absolute;
          width: 393px;
          height: 193px;
          bottom: 0;
          right: 0;
          transform: translate(45px, 32px);
          background: url('<%= APP_CDN %>/assets/marketing/deco_1.svg')
            no-repeat;
          z-index: -1;

          @media screen and (max-width: $m-grid-min-vp) {
            content: initial;
            display: none;
          }
        }

        &::after {
          content: '';
          display: block;
          position: absolute;
          top: 0;
          right: 0;
          width: 284px;
          height: 262px;
          transform: translate(35px, -35px);
          background: url('<%= APP_CDN %>/assets/marketing/deco_2-straight.svg')
            no-repeat;
          z-index: -1;

          @media screen and (max-width: $m-grid-min-vp) {
            content: initial;
            display: none;
          }
        }
      }
    }
  }
}

